# mnist

./: DiT_MNIST.ipynb  README.md  dit.py  pyproject.toml  scratchpad.ipynb
