[project]
name = "mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "debugpy>=1.8.17",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "nnsight>=0.5.12",
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

